--- a/prog/lj/README
+++ b/prog/lj/README
@@ -1,5 +1,66 @@
 Notes
+======
 * now use the reflective boundary by default (more robust)
+  but has artifacts (with --T0 and --T1 are set to be the same as -T)
+  smooth boundary needs a smaller `alf0', see Artifacts for details
+
+* the computed mean force is 1/tp, as shown in `lj.e' u 1:2
+  it is not affected by the thermostat temperature
+
 * icc 4m7s vs gcc 4m55s
+
+
+Bin size
+==========
+smaller bin size (--dr) requires larger --ac to get a smooth profile
+
+
+Artifacts v1.1
+================
+as of b8b489f57025307766a73addd155f3e7eecb2a51
+
+Symptoms
+~~~~~~~~~
+* At the boundary `lj.e' dips at the last bin
+  but no visible effect at the left boundary
+
+* a sharp peak in the histogram immediately at the right of the right boundary (>epmax)
+
+Diagnosis
+~~~~~~~~~~
+This is due to that the temperature outside of (xmin, xmax) has been set to tp0
+
+The symptoms vanishes if with a smooth boundary condition (-b 0)
+However this solution must be accompanied by a small --a0,
+otherwise, the system can easily flow outside of the range
+
+
+Other attempts
+~~~~~~~~~~~~~~
+* affects both ljmd.c and ljmc.c
+
+* < e^2 > slightly dips the at the right boundary (larger U) for ljmc
+
+* same amount of drift --a0 0.01 (default 0.1)
+* same amount of drift to --ac 10.0 (default 1.0)
+
+* domain-inverted (-epmax, -epmin) version shows the drift
+  also presents at the high energy end (epmax), so it is not
+  due to a programming error about 0 and al->n - 1
+
+* not due to the bin size
+  with --dr 1, the drift affects several bins at the right boundary
+
+* the drift reduces with `tpstat' (-T) set to 3.0 (default 1.0)
+  which is closer to the temperature of the high energy boundary
+* the drift reduces with the new options --T0 1 --T1 3
+
+* alged_getdenam(), arithematic mean for < e^2 >, same result
+  suggesting that the artifact is due to the downward `inertia'
+  beyond the right boundary because tpmax << tpstat,
+  shifting `< du >', hence the mean-force estimate, downwards
+
+
+
 
 
