--- a/prog/lj/README
+++ b/prog/lj/README
@@ -8,7 +8,12 @@ Notes
 * the computed mean force, as shown in `lj.e' u 1:2, is 1.0/tp
   it is not affected by the thermostat temperature
 
-* icc 4m7s vs gcc 4m55s
+* icc 4m7s vs gcc 4m55s (with -O3 -march=native)
+
+* The HMC momentum-reversal-upon-crossover version (--a0 0.1)
+  good flat histogram, sharp peaks at the two boundaries, reduces with time.
+  not sensitive to --ac
+  
 
 
 Bin size
